<resources>
    <string name="app_name">Survirun</string>
    <string name="story_profile">Good👍\n\nPlease post a picture of the survivor</string>
    <string name="story_name">Hi\nYou\'re a survivor of zombie apocalypse.\nWhat is your name?</string>
    <string name="pwd">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="confirm_pw">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_error">Enter a valid email.</string>
    <string name="pwd_error">Those passwords didn\'t match.</string>
    <string name="fill_error">Please fill in all the blanks.</string>
    <string name="sign_up_error">Registration error</string>
    <string name="format_error">Please check the format.</string>
    <string name="calorie">Calorie</string>
    <string name="exercise_time">Exercise Time</string>
    <string name="daily_target">Daily Target</string>
    <string name="my_goal">My Goal</string>
    <string name="modify_goals">Modify Goals</string>
    <string name="yesterday">Yesterday</string>
    <string name="save">Save</string>
    <string name="goal">Goal</string>
    <string name="next">Next</string>
    <string name="type_name">Please type your name.</string>
    <string name="profile_error">Please register your photo.</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="disable_location">Disable Location Services</string>
    <string name="use_location_service">Location service is required to use the app.</string>
    <string name="modify_location">Are you sure you want to modify the location settings?</string>
    <string name="setting">Setting</string>
    <string name="cancel">Cancel</string>
    <string name="need_location">You need location access to run this app.</string>
    <string name="permission_error_re_run">Permission denied.\nPlease re-run the app to allow permission.</string>
    <string name="permission_error_allow_setting">Permission denied.\nPermissions must be allowed in settings (app information).</string>
    <string name="tts_type" formatted="false">Now you burned %d kilocalories and ran a total of %.2f kilometers. So far, you\'ve exercised %d hour, %d minute and %d second.</string>
    <string name="pause_text">Since you starting resting,\n</string>
    <string name="total_exercise">Total Exercise</string>
    <string name="exercise_time_br">Exercise\nTime</string>
    <string name="route">Route</string>
    <string name="pace_goal">Pace Goal</string>
    <string name="walking_lightly">Walking Lightly</string>
    <string name="walking_steadily">Walking Steadily</string>
    <string name="running_lightly">Running Lightly</string>
    <string name="running_vigorously">Running Vigorously</string>
    <string name="walking_briskly">Walking Briskly</string>
    <string name="burning_fat">Burning Fat</string>
    <string name="exercise_time_goal">Exercise Time Goal</string>
    <string name="exercise_distance_goal">Exercise Distance Goal</string>
    <string name="hour_">"-hour "</string>
    <string name="minute_exercise">-minute Exercise</string>
    <string name="hour_exercise">-hour Exercise</string>
    <string name="calorie_burning_goal">Calorie Burning Goal</string>
    <string name="test">나는 문어 꿈을 꾸는 문어 꿈속에서는 무엇이든지 될 수 있어 나는 문어 잠을 자는 문어 잠에 드는 순간 여행이 시작되는 거야 높은 산에 올라가면 나는 초록색 문어 장미꽃 밭 숨어들면 나는 빨간색 문어 횡단보도 건너가면 나는 줄무늬 문어 밤하늘을 날아가면 나는 오색 찬란한 문어가 되는 거야 아아아 야 아아아 아아아 깊은 바닷속은 너무 외로워 춥고 어둡고 차갑고 때로는 무섭기도 해 에에에 야 아아아 아아 그래서 나는 매일 꿈을 꿔 이곳은 참 우울해</string>
    <string name="end">END</string>
    <string name="explanation">Explanation</string>
    <string name="zombie_mode">Zombie Mode</string>
    <string name="story_mode">Story Mode</string>
    <string name="start">Run Together</string>
    <string name="run">run!</string>
    <string name="story">Story #</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_user">Do you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="duplicate_check">Check</string>
    <string name="email_enter">Please enter your email</string>
    <string name="email_already">This email has already been signed up</string>
    <string name="email_can_use">You can use this email</string>
    <string name="check_id_pwd">Please check your ID or password</string>
    <string name="server_error">Sorry for the inconvenience caused by the server error</string>
    <string name="pwd_include">Please include numbers, letters, and special characters</string>
    <string name="pwd_condition">Enter the password in the box above according to the conditions</string>
    <string name="choose_mode">Please choose the mode.</string>
    <string name="setting_mode">Mode setting</string>
    <string name="tip_mode">Tip. Press the mode to see the explanation</string>
    <string name="fill_condition">Fill in the blanks according to the conditions</string>
    <string name="fill_pwd_condition">Please fill in the password according to the conditions</string>
    <string name="check_email_validity">Please check the email validity</string>
    <string name="pwd_enter">Please enter it within 8-15 characters</string>
    <string name="reset_goals">Reset Goals</string>
    <string name="shut_down_app">Are you sure you want\nto shut down the app?</string>
    <string name="close">Close</string>
    <string name="retry">Retry</string>
    <string name="network_error_occurred">A network error has occurred.</string>
    <string name="survive_zombie">Survive from\nzombies chasing you.</string>
    <string name="sign_in_">Sign In</string>
    <string name="sign_up_">Sign Up</string>
    <string name="welcome_title_1">Run</string>
    <string name="welcome_text_1">Zombies are chasing you</string>
    <string name="welcome_title_2">Get your colleagues</string>
    <string name="welcome_text_2">Run and share\nwith your colleagues</string>
    <string name="welcome_title_3">Check the record</string>
    <string name="welcome_text_3">Save and check\nthe records you\'ve been running on</string>
    <string name="skip">Skip</string>
    <string name="saying_">Humor and health, the staples of wealth</string>
    <string name="saying_1">Humor and health, the staples of wealth</string>
    <string name="saying_2">Your body can do it, it\'s time to convince your mind</string>
    <string name="saying_3">The hard days are what make you stronger</string>
    <string name="saying_4">Energy and persistence conquer all things</string>
    <string name="saying_5">The future depends on what we do in the present</string>
    <string name="saying_6">Pain is temporary. Quitting lasts forever</string>
    <string name="saying_7">One of these days is none of these days</string>
    <string name="saying_8">There is no substitute for hard work</string>
    <string name="saying_9">Never, Never, Never, Never give up</string>
    <string name="saying_10">Begin anywhere</string>
    <string name="error_server">Server error. Please run it again soon.</string>
    <string name="sign_in_account">Sign in to account</string>
    <string name="create_account">create a new account</string>
    <string name="end_exercise">Do you want to end the exercise?</string>
    <string name="enter_name">Enter name</string>
    <string name="permission_error_again">Permission denied.\nPress it again to allow the permitting.</string>
    <string name="map_tip">Tip. If you wear earphones,\nyou can enjoy working out more vividly.</string>
    <string name="check">Check</string>
    <string name="network_error">Network error</string>
    <string name="error_detail">Please write down the error details.</string>
    <string name="delete_cache">Delete app cache</string>
    <string name="report_bug">Report bugs</string>
    <string name="edit_informaiton">Edit personal info</string>
    <string name="exercise_record_yet">There is no exercise record yet.\nPlease start working out.</string>
    <string name="min"> min</string>
    <string name="hour">hr</string>
    <string name="user_not_found">The user was not found</string>
    <string name="add_friend">Add</string>
    <string name="you_already_friend">You\'re already the best friend of yourself</string>
    <string name="looking_user">Looking for a user...</string>
    <string name="looking_record">Looking for records...</string>
    <string name="delete_cache_text">Do you want to delete the cache?</string>
    <string name="detail">"Details"</string>
    <string name="error">Error</string>
    <string name="ask">Ask</string>
    <string name="ranking">Ranking</string>
    <string name="all">All</string>
    <string name="friends">Friends</string>
    <string name="name">Name</string>
    <string name="info">Info</string>
    <string name="edit_profile">Edit profile</string>
    <string name="start_tts">Start!</string>
    <string name="create_zb">Zombie has been detected</string>
    <string name="hitted_zb">You\'re bitten by a zombie.</string>
    <string name="mok_cl">You\'ve achieved your goal. The exercise ends. Please check the results.</string>
    <string name="delete_friend">Delete friend</string>
    <string name="died">You died</string>
    <string name="delete_friend_text">Do you want to delete your friend?</string>
    <string name="success_add_friend_text">Successfully added friends. Please wait.</string>
    <string name="best_score">Best Score</string>
    <string name="default_profile">Default profile</string>
    <string name="introduce">Introduce yourself</string>
    <string name="success_reflected">It was successfully reflected</string>
    <string name="scroll_tip">Tip. Scroll through the numbers.</string>
    <string name="choose_level">Choose the difficulty level</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="point">Point</string>
    <string name="success_add_friend">Successfully added friends</string>
    <string name="score">score </string>
    <string name="base_camp">base camp</string>
    <string name="bring_ranking">Bringing up the rankings...</string>
    <string name="no_mark_ranking">There are no friends\nto mark on the rankings</string>
    <string name="zombies_not_appear">Zombies don\'t appear in this mode.</string>
    <string name="chart">Chart</string>
    <string name="check_status">Check your status</string>
    <string name="status">Status</string>
    <string name="closing_status">Closing status</string>
    <string name="radio_communication">Radio communication</string>
    <string name="press_down_explanation">Tip. Press down on the roles to see the explanation.</string>
    <string name="survivor">Survivor</string>
    <string name="win_condition">Win condition</string>
    <string name="researcher">Researcher</string>
    <string name="explode_institutes">Explode all the\nresearch institutes.</string>
    <string name="kill_survivor">Kill all survivors.\n</string>
    <string name="finding_bread">Finding bread. (Fully recovered 10)</string>
    <string name="ahn">Ahn Do-hwi</string>
    <string name="gang">Gang Cheol</string>
    <string name="supplies">Supplies. (Obtained items)</string>
    <string name="kim">Seri Kim</string>
    <string name="remove_zombie">Remove zombie substances</string>
    <string name="rex">Rex</string>
    <string name="choose_character">Choose one and touch the character</string>
    <string name="mode_selection">Mode selection</string>
    <string name="running_alone">Running alone</string>
    <string name="running_together">Running together</string>
    <string name="ahn_info">High school student.\nHe always carry bread from the snack bar.</string>
</resources>