<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@drawable/dialog_round"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_network_error"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/explain_textView"/>

    <TextView
        android:id="@+id/explain_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/network_error_occurred"
        android:textSize="17sp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/help_button"
        app:layout_constraintTop_toBottomOf="@id/image"/>

    <Button
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="문의하기"
        android:textSize="13sp"
        app:icon="@drawable/ic_information"
        app:iconSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/explain_textView"
        app:layout_constraintBottom_toTopOf="@id/layout2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"/>
    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:background="@drawable/cancel_button_background"
            android:text="@string/close"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yes_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/yes_button_background"
            android:text="@string/retry"
            android:gravity="center"
            android:textColor="@color/white"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
