<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".activity.account.SignInActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_background2"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="2"
        android:background="@drawable/sign_in_box"
        android:paddingHorizontal="48dp"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/red"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/text2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_account"
            android:textSize="16sp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@id/layout1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/layout1"
            app:layout_constraintLeft_toLeftOf="@id/layout1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:boxBackgroundColor="?attr/colorBox"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/layout2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_enter"
                android:textSize="18sp"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwd"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/layout2"
            app:layout_constraintLeft_toLeftOf="@id/layout2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:boxBackgroundColor="?attr/colorBox"
            android:layout_marginTop="28dp"
            app:layout_constraintBottom_toTopOf="@id/sign_up_textView2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd"
                android:textSize="18sp"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/sign_up_textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/no_account"
            android:textColor="?attr/colorBlackToWhite"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/sign_up_textView2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/sign_up_textView2"
            app:layout_constraintTop_toTopOf="@id/sign_up_textView2" />

        <TextView
            android:id="@+id/sign_up_textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/login_error_message"
            app:layout_constraintLeft_toRightOf="@id/sign_up_textView1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout2" />

        <TextView
            android:id="@+id/login_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:visibility="invisible"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_textView2" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="16dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_error_message" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>