<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ExerciseResultActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/end"
        android:textSize="30sp"
        android:layout_margin="40dp"
        android:id="@+id/temp_text1"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/temp_text1"
        app:layout_constraintBottom_toTopOf="@id/btn_go_main">


        <TextView
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calorie"
            android:id="@+id/end_calorie_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/end_calorie"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toTopOf="@id/end_time_text"/>

        <TextView
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="200 Kcal"
            android:id="@+id/end_calorie"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/end_calorie_text"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toTopOf="@id/end_time"/>


        <TextView
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_time"
            android:id="@+id/end_time_text"
            app:layout_constraintTop_toBottomOf="@id/end_calorie_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/end_time"
            app:layout_constraintBottom_toTopOf="@id/end_km_text"
            android:layout_margin="20dp"/>

        <TextView
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:01:11"
            android:id="@+id/end_time"
            app:layout_constraintTop_toBottomOf="@id/end_calorie"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/end_time_text"
            app:layout_constraintBottom_toTopOf="@id/end_km"
            android:layout_margin="20dp"/>


        <TextView
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="KM"
            android:id="@+id/end_km_text"
            app:layout_constraintTop_toBottomOf="@id/end_time_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/end_km"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.15km"
            android:id="@+id/end_km"
            app:layout_constraintTop_toBottomOf="@id/end_time"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/end_km_text"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"/>






    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/btn_go_main"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>